--- a/app/views/shared/_log_out_nav.html.erb
+++ b/app/views/shared/_log_out_nav.html.erb
@@ -3,7 +3,7 @@
       <div class="thinga logo"><a class="logo" href="<%= root_path %>"><img class="logo" src="/assets/pq_logo_final.png" alt=""></a></div>
       <div class="right-nav">
         <div class="welcome-message">
-          <%= presenter.current_message %>
+          <%= @presenter.current_message %>
         </div>
         <a class="sign-in" href="<%= logout_path(last_path: request.env['REQUEST_PATH']) %>">Sign Out</a>
       </div>
