--- a/app/assets/stylesheets/search/dogs/index.css
+++ b/app/assets/stylesheets/search/dogs/index.css
@@ -17,11 +17,37 @@
   width: 290px;
   height: 400px;
   font-size: 20;
+  margin-top: 15px;
   margin-right: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
   background-color: #DBDBDB;
   border: 1px solid #c4c4c4;
 
+}
+
+.favorites-button {
+  background-color: green;
+  margin: 0px;
+  border: none;
+  display: flex;
+  width: 270px;
+  margin-left: 10px;
+  height: 50px;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  margin-top: 1;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.button_to {
+  margin: 0px;
+  border: none;
+  padding: 0px;
+  width: 250px;
 }
 
 .small {
