--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body>
     <%= render "shared/#{@presenter.current_navbar}" %>
+    <div class="flash"><%= flash.notice %></div>
     <%= yield %>
   </body>
 </html>
