make sure you can't create a favorite unless logged in and you can't view another users favorites

--- a/app/views/search/cats/index.html.erb
+++ b/app/views/search/cats/index.html.erb
@@ -63,7 +63,7 @@
           size: params[:size], breed: params[:breed],
           age: params[:age], sex: params[:sex],
           latitude: params[:latitude],
-          longitude: params[:longitude], type: 'cat', ), class: 'favorites-button' if @presenter.user.logged_in? %>
+          longitude: params[:longitude], type: 'cat'), class: 'favorites-button' if @presenter.user.logged_in? %>
         </div>
       <% end %>
       </section>
