fix name title length problem on favorites page

--- a/app/views/default/favorites/show.html.erb
+++ b/app/views/default/favorites/show.html.erb
@@ -9,7 +9,7 @@
             <article class="pet-box">
                 <img class="thumbnail-pic" src="<%= favorite.photo %>" alt="">
               <article class="pet-thumb-info">
-                <div class="pet-name"><%= favorite.name %></div>
+                <div class="pet-name"><%= favorite.display_name %></div>
                 <div>
                   <% favorite.breed_list.each do |breed| %>
                     <div class="attribute  small"><%= breed %></div>
@@ -20,7 +20,7 @@
             </article>
           </article>
         </a>
-        <%= button_to "Remove Favorite", delete_favorite_path(fav_id: favorite.id), method: 'delete', class: 'favorites-button' if @presenter.user.logged_in? %>
+        <%= button_to "Remove Favorite", delete_favorite_path(fav_id: favorite.id), method: 'delete', class: 'favorites-button remove-fav' %>
       </div>
     <% end %>
   </section>
