--- a/app/assets/stylesheets/search/animals/show.css
+++ b/app/assets/stylesheets/search/animals/show.css
@@ -33,6 +33,8 @@
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
+  width: 130px;
+  max-height: 200px;
 }
 
 .books-heading {
