fix problem with book if there is no text snippet

--- a/app/views/search/dogs/index.html.erb
+++ b/app/views/search/dogs/index.html.erb
@@ -43,7 +43,7 @@
                                     id: dog.id, name: dog.name,
                                     location: dog.contact.zip,
                                     size: dog.size.first, breed: dog.breeds.first,
-                                    age: dog.age.first, sex: dog.sex.first) %>">
+                                    age: dog.age, sex: dog.sex.first) %>">
             <article class="pet-box">
                 <img class="thumbnail-pic" src="<%= dog.photos.thumbnail_photo %>" alt="">
               <article class="pet-thumb-info">
