--- a/app/views/search/cats/index.html.erb
+++ b/app/views/search/cats/index.html.erb
@@ -43,7 +43,7 @@
                                       id: cat.id, name: cat.name,
                                       location: cat.contact.zip,
                                       size: cat.size.first, breed: cat.breeds.first,
-                                      age: cat.age.first, sex: cat.sex.first) %>">
+                                      age: cat.age, sex: cat.sex.first) %>">
               <article class="pet-box">
                   <img class="thumbnail-pic" src="<%= cat.photos.thumbnail_photo %>" alt="">
                 <article class="pet-thumb-info">
