--- a/app/views/shared/_log_in_nav.html.erb
+++ b/app/views/shared/_log_in_nav.html.erb
@@ -1,6 +1,10 @@
 <nav id="nav">
     <div class="inner-nav">
       <div class="thinga logo"><a class="logo" href="<%= root_path %>"><img class="logo" src="/assets/pq_logo_final.png" alt=""></a></div>
-      <a class="sign-in" href="<%= login_path(last_path: request.env['REQUEST_PATH']) %>">Sign In</a>
+      <form class="sign-form" action="<%= login_path(last_path: request.env['REQUEST_PATH']) %>" method="get">
+        <input id="lat" type="hidden" name="lat"></input>
+        <input id="lon" type="hidden" name="lon"></input>
+        <input id="sign-button" type="submit" name="Sign In" value="Sign In">
+      </form>
     </div>
 </nav>
