--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,19 +16,19 @@
     <%= render "shared/#{@presenter.current_navbar}" %>
     <div class="flash"><%= flash.notice %></div>
     <%= yield %>
-    <script type="text/javascript">
-      var lat = document.getElementById("lat");
-      var lon = document.getElementById("lon");
-      function userLocation() {
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(userPosition);
+    <% unless current_user.logged_in? || session['lat'] %>
+      <script type="text/javascript">
+        $('#sign-button').attr('disabled', '');
+        function assignPosition(pos) {
+          document.getElementById('lat').value = pos.coords.latitude;
+          document.getElementById('lon').value = pos.coords.longitude;
+          $('#sign-button').removeAttr('disabled');
         }
-      }
-      function userPosition(position) {
-        lat.value = position.coords.latitude
-        lon.value = position.coords.longitude
-      }
-      window.onload = userLocation;
-    </script>
+        $(function() {
+          navigator.geolocation.getCurrentPosition(assignPosition);
+        });
+
+      </script>
+    <% end %>
   </body>
 </html>
