--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,6 +32,9 @@
         </div>
       </div>
     </article>
+    <article class="below-banner">
+
+    </article>
   </main>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script type="text/javascript">
