--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= render "shared/#{@presenter.current_navbar}" %>
     <div class="flash"><%= flash.notice %></div>
     <%= yield %>
-    <% unless current_user.logged_in? || session['lat'] %>
+    <% unless current_user.logged_in? %>
       <script type="text/javascript">
         $('#sign-button').attr('disabled', '');
         function assignPosition(pos) {
