fix bug in cat/dog show of map not loading

--- a/app/views/search/cats/show.html.erb
+++ b/app/views/search/cats/show.html.erb
@@ -58,6 +58,7 @@
 
    </section>
  </main>
+<% if @presenter.shelter_coordinates %>
   <script>
     var lat = <%= @presenter.shelter_coordinates[0] %>
     var long = <%= @presenter.shelter_coordinates[1] %>
@@ -74,3 +75,4 @@
 
 
   </script>
+<% end %>
