--- a/app/views/user_notifier_mailer/send_new_pet_email.html.erb
+++ b/app/views/user_notifier_mailer/send_new_pet_email.html.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>We have new animals near you!</h1>
-    <h3><%= @shelter.name %> has gotten <%= @pets.count %> new animals this week!</h3>
+    <h3><%= @shelter.name %> has gotten <%= @pets.count %> new animals in the past month!</h3>
     <h5> <%= @shelter.phone %></h5>
     <h5> <%= @shelter.email %></h5>
 
