hardcode lat long values for presentation and make cook javascripty buttons

--- a/app/assets/stylesheets/search/animals/index.css
+++ b/app/assets/stylesheets/search/animals/index.css
@@ -67,6 +67,11 @@
   color: white;
 }
 
+.remove-fav-button {
+  background-color: #9e0000;
+  color: white;
+}
+
 .card-link {
   text-decoration: none;
 }
