--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,22 +14,15 @@
         </article>
       </section>
     <article class="lower-banner">
-      <div class="slogan-box bottom-banner">
-        <div class="font-lower">
-          <div class="ul-27">
-            Pet Quest helps you adopt an animal that's right for you!
-          </div>
-            <li class="font-18">
-              Search available animals near you by type, breed, size, and more!
-            </li>
-            <li class="font-18">
+            <div class="font-18">
+              Search available animals near you by type, breed, size, and gender!
+            </div>
+            <div class="font-18">
               Find books, and resources on taking care of the animal you are interested in!
-            </li>
-            <li class="font-18">
+            </div>
+            <div class="font-18">
               Not sure if you're commited yet? Keep a list of potential pets you may want to adopt later.
-            </li>
-        </div>
-      </div>
+            </div>
     </article>
     <article class="below-banner">
 
